test/fixtures/good/object.roy
console.log {}
console.log {a: 1}
console.log {'b': 10}
console.log {"c": 11}
console.log {4: 100}

let x = {}
console.log x

let y = {'test': 'this'}
console.log y
