test/fixtures/bad/structure_literal_access.roy
let o = {a: 1, b: true}

o.c
